--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
     <a href="https://github.com/FStarLang/FStar">F*:
       Next Generation Security Type System</a>
       (with Karthik Bhargavan, Cédric Fournet, Chantal Keller,
-       Alfredo Pironti, Pierre-Yves Strub, Nikhil Swamy, and others)</li>
+       Pierre-Yves Strub, Nikhil Swamy, and others)</li>
 
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/QuickChick">QuickChick:
