--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/QuickChick">QuickChick:
       Property-Based Testing Plugin for Coq</a>
-      (with Maxime Dénès, Leonidas Lampropoulos, Zoe Paraskevopoulou,
+      (with Maxime Dénès, John Hughes, Leonidas Lampropoulos, Zoe Paraskevopoulou,
        and Benjamin C. Pierce)</li>
 
   <li style="margin-bottom: 1ex;">
