--- a/index.html
+++ b/index.html
@@ -305,6 +305,9 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 <h2>Teaching</h2>
 
 <ul style="width:42em; text-align: left">
+  <li style="margin-bottom: 1ex;"><b>Upcoming: Type Systems for Security Verification</b>
+    - Block Lecture, Saarland University, 16-27 March 2015<br/>
+  </li>
   <li style="margin-bottom: 1ex;"><b><a href="http://www.cis.upenn.edu/~bcpierce/courses/670Fall12/">Advanced Martial Arts in Coq</a></b>
     - CIS670 at UPenn, Fall 2012.
     Guest lecturer for 2 lectures:
