--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-   <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (organizer) 
+   <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (main organizer) 
   </li>
   <li style="margin-bottom: 1ex;">
    <a href="http://www.crash-safe.org/">CRASH/SAFE project</a> covered by <a href="http://www.sueddeutsche.de/digital/forschungsprojekt-crash-safe-von-null-auf-sicherheit-1.1970422">article in Süddeutsche Zeitung</a> <br/>(translation: <a href="https://www.duolingo.com/translation/e8956a3492f4308fc1090f17cb7a866d">part1</a>, <a href="https://www.duolingo.com/translation/a30a412b5218c0d8fe8471a06853155b">part2</a>)
@@ -82,14 +82,13 @@ I am looking for talented, highly motivated students, for research
 internships, MSc and PhD theses, etc. Here are some potential topics:
 <!--(but there are many other possible ones):--></p>
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/FStarLang/FStar">F*: Next Generation
-      Type-Based Verification System for ML</a>
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/FStarLang/FStar">F*: Type-Based Verification for ML</a>
   <ul>
-  <li><a href="https://github.com/FStarLang/FStar">Code on GitHub</a></li>
-  <li><a href="http://prosecco.gforge.inria.fr/tutorial.html">New F* tutorial</a>
-  (<a href="https://wiki.inria.fr/prosecco/F*_Materials_-_Joint_School_2014">more
-    materials from recent "summer" school</a>)</li>
-  <li><a href="https://research.microsoft.com/en-us/projects/fstar/">You can read more about old F* here</a></li>
+  <li><a href="https://github.com/FStarLang/FStar">Code on GitHub</a>;
+   <a href="http://prosecco.gforge.inria.fr/tutorial.html">New F* tutorial</a></li>
+  <!-- (<a href="https://wiki.inria.fr/prosecco/F*_Materials_-_Joint_School_2014">more -->
+  <!--   materials from recent "summer" school</a>)</li> -->
+  <!-- <li><a href="https://research.microsoft.com/en-us/projects/fstar/">You can read more about old F* here</a></li> -->
   </ul></li>
   <li style="margin-bottom: 1ex;"><a href="students/topics/2015/quick-chick.pdf">QuickChick: Property-Based Testing for Coq</a>
 <!--
