--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ internships, MSc and PhD theses, etc. Here are some potential topics:
 <ul>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2015/fstar.pdf">F*: Type-Based Verification for ML</a>
   <ul>
-  <li><a href="https://github.com/FStarLang/FStar">Code on GitHub</a>;
+  <li><a href="https://github.com/FStarLang/FStar">Code</a>;
    <a href="http://prosecco.gforge.inria.fr/tutorial.html">Tutorial</a></li>
   <!-- (<a href="https://wiki.inria.fr/prosecco/F*_Materials_-_Joint_School_2014">more -->
   <!--   materials from recent "summer" school</a>)</li> -->
