--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ I am looking for talented, highly motivated students, for research
 internships, MSc and PhD theses, etc. Here are some potential topics:
 <!--(but there are many other possible ones):--></p>
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2015/fstar.pdf">F*: Type-Based Verification for ML</a>
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2015/fstar.pdf">F*: SMT-Based Verification for ML</a>
 (<a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="http://prosecco.gforge.inria.fr/tutorial.html">tutorial</a>)</li>
   <li style="margin-bottom: 1ex;"><a href="students/topics/2015/quick-chick.pdf">QuickChick: Property-Based Testing for Coq</a>
