--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Research Cambridge</a>.</p>
 -->
 </ul>
 
-<h2>Searching for Students</h2>
+<h2 id="students">Searching for Students</h2>
 <p style="width:42em; text-align: left">
 I am looking for talented, highly motivated students, for research
 internships, MSc and PhD theses, etc. Here are some potential topics:
