--- a/index.html
+++ b/index.html
@@ -385,8 +385,16 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   </li>
 </ul>
 
-<h2>Advised Students</h2>
+<h2 id="old-students">Advised Students</h2>
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/yjugl">Yannis Juglaret</a>
+  <ul>
+    <li style="margin-top: 1ex;">Upcoming Internship at Inria, 2015-03 to 2015-08:<br/>
+      <a href="students/topics-2015/micro-policies-yannis.pdf"></a>
+    </li>
+  </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
