--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ Research Cambridge</a>.</p>
 
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
+
   <li style="margin-bottom: 1ex;">
    <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (main organizer) 
   </li>
@@ -166,6 +167,12 @@ MPRI website</a>.</p>
 (also on <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a> and <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;">
+  <a href="">The Joint EasyCrypt-F*-CryptoVerif School 2014 (Report)</a>.
+  <a href="http://siglog.hosting.acm.org/?attachment_id=77">SIGLOG
+  Newsletter</a>, Volume 2, Number 1, January 2015.
+  </li>
+  
   <li style="margin-bottom: 1ex;">
     Arthur Azevedo de Amorim,
     Maxime Dénès,
