--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-  <a href="">The Joint EasyCrypt-F*-CryptoVerif School 2014 (Report)</a>.
+  <br><a href="">The Joint EasyCrypt-F*-CryptoVerif School 2014 (Report)</a></bf>.
   <a href="http://siglog.hosting.acm.org/?attachment_id=77">SIGLOG
   Newsletter</a>, Volume 2, Number 1, January 2015.
   </li>
