--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;">
   <b><a href="">The Joint EasyCrypt-F*-CryptoVerif School 2014 (Report)</a></b>.
   <a href="http://siglog.hosting.acm.org/?attachment_id=77">SIGLOG
-  Newsletter</a>, Volume 2, Number 1, January 2015.
+  Newsletter, Volume 2, Number 1</a>, January 2015.
   </li>
   
   <li style="margin-bottom: 1ex;">
