--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-  C&#259;t&#259;lin Hri&#355;cu. <b><a href="publications/school2014-siglog.pdf">The Joint EasyCrypt-F*-CryptoVerif School 2014.</a></b> Report appeared in.
+  C&#259;t&#259;lin Hri&#355;cu. <b><a href="publications/school2014-siglog.pdf">The Joint EasyCrypt-F*-CryptoVerif School 2014.</a></b> Report appeared in
   <a href="http://siglog.hosting.acm.org/?attachment_id=77">SIGLOG
   Newsletter, Volume 2, Number 1</a>, January 2015.
   </li>
