--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 <h2 id="tools">Software</h2>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/FStarLang/FStar">F*:
+    <a href="https://www.fstar-lang.org">F*:
       Next Generation Security Type System</a>
       (with Karthik Bhargavan, Cédric Fournet, Chantal Keller,
        Pierre-Yves Strub, Nikhil Swamy, and others)</li>
