--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ Research Cambridge</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+   <a href="https://www.fstar-lang.org/tutorial/">F* tutorial at POPL 2015</a>
+  </li>
+  <li style="margin-bottom: 1ex;">
    <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (main organizer) 
   </li>
   <li style="margin-bottom: 1ex;">
