--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 <h2>Teaching</h2>
 
 <ul style="width:42em; text-align: left">
-  <li style="margin-bottom: 1ex;"><b><a href="http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html">Upcoming: Type Systems for Security Verification</a></b>
+  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html">Type Systems for Security Verification</a></b>
     - Block Lecture, Saarland University, 16-27 March 2015<br/>
   </li>
   <li style="margin-bottom: 1ex;"><b><a href="http://www.cis.upenn.edu/~bcpierce/courses/670Fall12/">Advanced Martial Arts in Coq</a></b>
