--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html">Type Systems for Security Verification</a></b> Lecture, Saarland University, 16-27 March 2015<br/>
   </li>
   <li style="margin-bottom: 1ex;">
-   <a href="https://www.fstar-lang.org/tutorial/">F* tutorial at POPL 2015</a>
+  <a href="https://www.fstar-lang.org/tutorial/">F* tutorial at POPL 2015</a>,
+  January 2015 
   </li>
   <li style="margin-bottom: 1ex;">
-   <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (main organizer) 
+   <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a>, November 2014 (main organizer) 
   </li>
 <!--
   <li style="margin-bottom: 1ex;">
