--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html">Type Systems for Security Verification</a></b> Lecture, Saarland University, 16-27 March 2015<br/>
+  <li style="margin-bottom: 1ex;"><b><a href="http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html">Type Systems for Security Verification</a></b> Lecture, Saarland University, 16-27 March 2015<br/>
   </li>
   <li style="margin-bottom: 1ex;">
   <a href="https://www.fstar-lang.org/tutorial/">F* tutorial at POPL 2015</a>,
