--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ If you are interested you can find my contact information below.</p>
 <p style="width:42em; text-align: left">
 <b>
 International students can apply via
-<a href="">Inria's Internships Program</a> until 9th February 2015
+<a href="https://drisi.inria.fr/internshipPublic/aide">Inria's Internships Program</a> until 9th February 2015
 (<a href="https://drisi.inria.fr/internshipPublic/showSujet/1884">F* topic</a>,
  <a href="https://drisi.inria.fr/internshipPublic/showSujet/1869">QuickChick topic</a>,
  <a href="https://drisi.inria.fr/internshipPublic/showSujet/1870">Micro-Policies topic</a>).
