--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ internships, MSc and PhD theses, etc. Here are some potential topics:
   </ul>
 -->
   </li>
-  <li style="margin-bottom: 1ex;"><a href="students/topics/2015/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></li>
+  <li style="margin-bottom: 1ex;"><a href="students/topics/2015/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></li> (<a href="https://github.com/micro-policies">code</a>)
 </ul>
 
 <p style="width:42em; text-align: left">
