--- a/publications.html
+++ b/publications.html
@@ -60,6 +60,24 @@
 <ol start="5" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Udit Dhawan,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Nikos Vasilakis,
+    Raphael Rubin,
+    Silviu Chiricescu,
+    Jonathan M. Smith,
+    Thomas F. Knight, Jr.,
+    Benjamin C. Pierce,
+    and André DeHon.
+    <b><a href="http://ic.ese.upenn.edu/abstracts/sdmp_asplos2015.html">
+        Architectural Support for Software-Defined Metadata Processing</a></b>.
+      In <a href="http://asplos15.bilkent.edu.tr/">
+      20th International Conference on Architectural Support for Programming Languages
+      and Operating Systems (ASPLOS 2015)</a>,
+      March 2015.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Arthur Azevedo de Amorim,
     Nathan Collins,
     André DeHon,
@@ -144,7 +162,7 @@
 </ol>
 
 <h3>Refereed Workshop Papers</h3>
-<ol start="15" style="width:42em; text-align: left">
+<ol start="16" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
       Udit Dhawan,
@@ -187,7 +205,7 @@
 </ol>
 
 <h3>Theses</h3>
-<ol start="21" style="width:42em; text-align: left">
+<ol start="22" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://scidok.sulb.uni-saarland.de/volltexte/2012/4800/pdf/catalin_phd_2012_03_24_final.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Security Protocol Analysis</a>. PhD Thesis, <!--Advisors: Michael Backes, Matteo Maffei, and Andrew D. Gordon (MSR)--> Saarland University, <!--Saarbr&uuml;cken. Submitted: 14 November 2011. Defended: 10 January 2012. Published: 29 March 2012--> January 2012.
   <ul style="font-size: small">
     <li>Coq formalizations, implementations, samples, and further details available on the pages of <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">the Zero-knowledge Type-checker</a> and of <a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">the F5 Toolchain for RCF</a>.</li>
