--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,13 @@
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>A Coq Framework For Verified Property Based Testing</em>
+    <ul style="font-size: small">
+      <li><a href="">CoqPL Workshop</a>: <a href="talks/QuickChick-Verified-Testing-CoqPL.pdf">slides</a>, <a href="https://github.com/QuickChick/QuickChick/tree/semGen/examples/RedBlack">code</a> (2015-01-18)</li>
+      <li><a href="https://www.lri.fr/~conchon/LTP2014/">GT LTP of GDR GPL</a>: <a href="talks/QuickChick-LTP-GPL.pdf">slides</a>, <a href="https://github.com/QuickChick/QuickChick/tree/master/examples/RedBlack">code</a> (2014-10-20)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>QuickChick: Speeding up Formal Proofs with Property-Based Testing</em>
     <ul style="font-size: small">
       <li><b>Upcoming:</b> <a href="http://www.maximedenes.fr/">Maxime Dénès</a> will present at the <a href="http://www.easychair.org/smart-program/VSL2014/Coq-program.html#talk:1091">Coq Workshop</a> in Viena<!--: <a href="talks/.pdf">slides</a>--> (2014-07-18 at 11:45)</li>
