--- a/index.html
+++ b/index.html
@@ -422,6 +422,14 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
     </li>
   </ul>
   </li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/xia/">Li-yao Xia</a>
+  <ul>
+    <li style="margin-top: 1ex;">Upcoming Internship at Inria, 2015-03 to 2015-08:<br/>
+      <a href="students/topics/2015/quick-chick-li-yao.pdf">Optimal Parameter Selection for Property-Based Testing</a>
+    </li>
+  </ul>
+  </li>
 -->
 
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
