--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@ internships, MSc and PhD theses, etc. Here are some potential topics:
 <p style="width:42em; text-align: left">
 If you are interested you can find my contact information below.</p>
 
+<!--
 <p style="width:42em; text-align: left">
-<!--<b>-->
 International students interested in internships can apply via
 <a href="https://drisi.inria.fr/internshipPublic/aide">Inria's Internships Program</a> until 9th February 2015
 (<a href="https://drisi.inria.fr/internshipPublic/showSujet/1884">F* topic</a>,
  <a href="https://drisi.inria.fr/internshipPublic/showSujet/1869">QuickChick topic</a>,
  <a href="https://drisi.inria.fr/internshipPublic/showSujet/1870">Micro-Policies topic</a>).
 Contacting me beforehand is still highly recommended though.
-<!--</b>-->
 </p>
+-->
 
 <!--
 <p style="width:42em; text-align: left">
@@ -427,6 +427,14 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <ul>
     <li style="margin-top: 1ex;">Upcoming Internship at Inria, 2015-03 to 2015-08:<br/>
       <a href="students/topics/2015/quick-chick-li-yao.pdf">Optimal Parameter Selection for Property-Based Testing</a>
+    </li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="">Simon Forest</a>
+  <ul>
+    <li style="margin-top: 1ex;">Upcoming Internship at Inria, 2015-03 to 2015-08:<br/>
+      <a href="students/topics/2015/fstar.pdf">F*: SMT-Based Verification for ML</a>
     </li>
   </ul>
   </li>
