--- a/talks.html
+++ b/talks.html
@@ -31,17 +31,18 @@
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>QuickChick: Speeding up Formal Proofs with Property-Based Testing</em>
+  <li style="margin-bottom: 1ex;"><em>QuickChick: Property-based testing for Coq</em>
+<!-- QuickChick: Speeding up Formal Proofs with Property-Based Testing -->
     <ul style="font-size: small">
-      <li><b>Upcoming:</b> <a href="http://www.maximedenes.fr/">Maxime Dénès</a> will present at the <a href="http://www.easychair.org/smart-program/VSL2014/Coq-program.html#talk:1091">Coq Workshop</a> in Viena<!--: <a href="talks/.pdf">slides</a>--> (2014-07-18 at 11:45)</li>
+      <li><a href="http://www.maximedenes.fr/">Maxime Dénès</a> presented this at the <a href="http://www.easychair.org/smart-program/VSL2014/Coq-program.html#talk:1091">Coq Workshop</a>: <a href="talks/coq6_submission_4.pdf">abstract</a>,  <a href="talks/QuickChick-Coq.pdf">slides</a>, <a href="https://github.com/lemonidas/QuickChick/blob/master/Tests.v">code</a> (2014-07-18)</li>
       <li><a href="http://www.pps.univ-paris-diderot.fr/gdt-types-realisabilite/">Coq Working Group @ PPS</a>: <a href="talks/QuickChick-PPS.pdf">slides</a> (2014-03-19)</li>
       <li>Inria Prosecco reading group: <a href="talks/property-based-testing-prosecco.pdf">slides</a>, <a href="talks/property-based-testing-prosecco-code.zip">code</a> (2013-11-29)</li>
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified Low-Level Tagging Schemes for Safety and Security</em>
+  <li style="margin-bottom: 1ex;"><em>Micro-Policies: A Framework for Verified, Tag-Based Security Monitors</em>
     <ul style="font-size: small">
-      <li><b>Upcoming:</b> <a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC)</a> in Vienna<!--: <a href="talks/.pdf">slides</a>--> (2014-07-18 at 15:30)</li>
+      <li><a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC)</a>: <a href="talks/Micro-Policies-FCS.pdf">slides</a> (2014-07-18)</li>
       <li><a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
     </ul>
   </li>
