--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ MPRI website</a>.</p>
     C&#259;t&#259;lin Hri&#355;cu,
     Benjamin C. Pierce,
     Antal Spector-Zabusky,
-    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf">Micro-Policies: A Framework for Verified, Tag-Based Security Monitors</a></b>. Submitted. November 2014.
+    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf">Micro-Policies: A Framework for Verified, Tag-Based Security Monitors</a></b>. Accepted at Oakland S&amp;P 2015. Draft of November 2014.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a></li>
   </ul>
