--- a/publications.html
+++ b/publications.html
@@ -60,6 +60,19 @@
 <ol start="5" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Arthur Azevedo de Amorim,
+    Maxime Dénès,
+    Nick Giannarakis,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Benjamin C. Pierce,
+    Antal Spector-Zabusky,
+    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf">Micro-Policies: A Framework for Verified, Tag-Based Security Monitors</a></b>. Accepted at <a href="http://www.ieee-security.org/TC/SP2015/">Oakland S&amp;P 2015</a>. Draft of November 2014.
+  <ul style="font-size: small">
+    <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a></li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Udit Dhawan,
     C&#259;t&#259;lin Hri&#355;cu,
     Nikos Vasilakis,
@@ -162,7 +175,7 @@
 </ol>
 
 <h3>Refereed Workshop Papers</h3>
-<ol start="16" style="width:42em; text-align: left">
+<ol start="17" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
       Udit Dhawan,
@@ -205,7 +218,7 @@
 </ol>
 
 <h3>Theses</h3>
-<ol start="22" style="width:42em; text-align: left">
+<ol start="23" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://scidok.sulb.uni-saarland.de/volltexte/2012/4800/pdf/catalin_phd_2012_03_24_final.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Security Protocol Analysis</a>. PhD Thesis, <!--Advisors: Michael Backes, Matteo Maffei, and Andrew D. Gordon (MSR)--> Saarland University, <!--Saarbr&uuml;cken. Submitted: 14 November 2011. Defended: 10 January 2012. Published: 29 March 2012--> January 2012.
   <ul style="font-size: small">
     <li>Coq formalizations, implementations, samples, and further details available on the pages of <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">the Zero-knowledge Type-checker</a> and of <a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">the F5 Toolchain for RCF</a>.</li>
