--- a/publications.html
+++ b/publications.html
@@ -253,11 +253,19 @@
 <!-- </ul> -->
 
 <!--
+-->
 <h3>Drafts</h3>
 <ol start="22" style="width:42em; text-align: left">
-
+  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
+    Leonidas Lampropoulos,
+    Antal Spector-Zabusky,
+    Arthur Azevedo de Amorim,
+    Maxime Dénès,
+    John Hughes,
+    Benjamin C. Pierce, and
+    Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing Noninterference, Quickly</a></b>. <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>. Submitted to Special Issue of Journal of Functional Programming for ICFP 2013. September 2014.
+  </li>
 </ol>
--->
 
 <!-- Google analytics code -->
 <script>
