--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>A Coq Framework For Verified Property Based Testing</em>
+  <li style="margin-bottom: 1ex;"><em>A Coq Framework for Verified Property Based Testing</em>
     <ul style="font-size: small">
       <li><a href="">CoqPL Workshop</a>: <a href="talks/QuickChick-Verified-Testing-CoqPL.pdf">slides</a>, <a href="https://github.com/QuickChick/QuickChick/tree/semGen/examples/RedBlack">code</a> (2015-01-18)</li>
       <li><a href="https://www.lri.fr/~conchon/LTP2014/">GT LTP of GDR GPL</a>: <a href="talks/QuickChick-LTP-GPL.pdf">slides</a>, <a href="https://github.com/QuickChick/QuickChick/tree/master/examples/RedBlack">code</a> (2014-10-20)</li>
