--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/zoep">Zoe Paraskevopoulou</a>
+  <li style="margin-bottom: 1ex;"><a href="https://zoep.github.io/">Zoe Paraskevopoulou</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
       <a href="publications/verified-testing-report.pdf">QuickChick: A Coq Framework For Verified Property-Based Testing</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7104/1/DT2014-0240.pdf">thesis</a>)
@@ -456,7 +456,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/nickgian">Nick Giannarakis</a>
+  <li style="margin-bottom: 1ex;"><a href="https://nickgian.github.io/">Nick Giannarakis</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
       <a href="publications/micropolicies-draft.pdf">Formally Verified Tag-Based Enforcement of Control Flow Integrity</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7107/1/DT2014-0243.pdf">thesis</a>)
