--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html">Type Systems for Security Verification</a></b> Lecture, Saarland University, 16-27 March 2015<br/>
   <ul>
-  <li><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">Slides</a></li>
+  <li><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">Slides and Homework</a></li>
   </ul>
   </li>
   <li style="margin-bottom: 1ex;">
