--- a/index.html
+++ b/index.html
@@ -195,6 +195,19 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Nikhil Swamy,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Chantal Keller,
+    Pierre-Yves Strub,
+    Aseem Rastogi,
+    Antoine Delignat-Lavaud,
+    Karthikeyan Bhargavan, and
+    C&eacute;dric Fournet.
+    <a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a>.
+    Submitted to ICFP 2015. Draft of March 2015.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu,Maxime Dénès,
     Leonidas Lampropoulos, and Benjamin C. Pierce.
     <a href="publications/foundational-pbt.pdf">Foundational Property-Based Testing</a>.
