--- a/index.html
+++ b/index.html
@@ -203,14 +203,14 @@ MPRI website</a>.</p>
     Antoine Delignat-Lavaud,
     Karthikeyan Bhargavan, and
     C&eacute;dric Fournet.
-    <a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a>.
+    <b><a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></b>.
     Submitted to ICFP 2015. Draft of March 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">
     Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu,Maxime Dénès,
     Leonidas Lampropoulos, and Benjamin C. Pierce.
-    <a href="publications/foundational-pbt.pdf">Foundational Property-Based Testing</a>.
+    <b><a href="publications/foundational-pbt.pdf">Foundational Property-Based Testing</a></b>.
     Submitted to ITP 2015. Draft of March 2015.
   </li>
 
