--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/yjugl">Yannis Juglaret</a>
   <ul>
-    <li style="margin-top: 1ex;">Upcoming Internship at Inria, 2015-03 to 2015-08:<br/>
+    <li style="margin-top: 1ex;">Ongoing Internship at Inria, 2015-03 to 2015-08:<br/>
       <a href="students/topics/2015/micro-policies-yannis.pdf">Efficient Secure Compilation Using Micro-Policies</a>
     </li>
   </ul>
@@ -462,7 +462,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 
   <li style="margin-bottom: 1ex;">Simon Forest
   <ul>
-    <li style="margin-top: 1ex;">Upcoming Internship at Inria, 2015-03 to 2015-08:<br/>
+    <li style="margin-top: 1ex;">Ongoing Internship at Inria, 2015-03 to 2015-08:<br/>
       <a href="students/topics/2015/fstar.pdf">F*: SMT-Based Verification for ML</a>
     </li>
   </ul>
