--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html">Type Systems for Security Verification</a></b> Lecture, Saarland University, 16-27 March 2015<br/>
-  <ul>
-  <li><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">Slides and Homework</a></li>
-  </ul>
+<!--http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html-->
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">Type Systems for Security Verification</a>, Lecture, Saarland University, 16-27 March 2015
   </li>
   <li style="margin-bottom: 1ex;">
   <a href="https://www.fstar-lang.org/tutorial/">F* tutorial at POPL 2015</a>,
@@ -208,7 +206,7 @@ MPRI website</a>.</p>
   </li>
 
   <li style="margin-bottom: 1ex;">
-    Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu,Maxime Dénès,
+    Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu, Maxime Dénès,
     Leonidas Lampropoulos, and Benjamin C. Pierce.
     <b><a href="publications/foundational-pbt.pdf">Foundational Property-Based Testing</a></b>.
     Submitted to ITP 2015. Draft of March 2015.
@@ -227,7 +225,7 @@ MPRI website</a>.</p>
     C&#259;t&#259;lin Hri&#355;cu,
     Benjamin C. Pierce,
     Antal Spector-Zabusky,
-    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf">Micro-Policies: A Framework for Verified, Tag-Based Security Monitors</a></b>. To appear in <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, May 2015.
+    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Verified, Tag-Based Security Monitors</a></b>. To appear in <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, May 2015.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a></li>
   </ul>
@@ -292,6 +290,7 @@ MPRI website</a>.</p>
   </li>
 -->
 
+<!--
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu, Michael Greenberg, Ben Karel, Benjamin C. Pierce, Greg Morrisett. <b><a href="publications/all-your-ifcexception-oakland2013-full.pdf">All Your IFCException Are Belong To Us</a></b>. In <a href="http://www.ieee-security.org/TC/SP2013/">34th IEEE Symposium on Security and Privacy (Oakland  S&amp;P)</a>, pages 3-17, IEEE Computer Society Press, May 2013.
   <ul style="font-size: small">
     <li>Coq formalization and proofs are available <!--a href="publications/all-your-ifcexception-coq-proofs.zip"--><a href="https://github.com/mgree/navdifc">here</a>.</li>
@@ -300,7 +299,6 @@ MPRI website</a>.</p>
   </ul>
   </li>
 
-<!--
   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, and Matteo Maffei. <b><a href="publications/rcf-and-or-coq-jcs2014.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Secure Protocol Implementations</a></b>, <a href="http://www.iospress.nl/journal/journal-of-computer-security/">Journal of Computer Security (JCS)</a>; <a href="http://iospress.metapress.com/content/k28485h0t643/?p=f499e1ab872f49ddb4350156a27584e9&pi=0"> Special Issue on Foundational Aspects of Security</a>, 22(2):301-353, February, 2014.
   <ul style="font-size: small">
     <li><a href="publications/rcf-and-or-coq-tosca2011-post.pdf">Preliminary version</a> appeared in <a href="http://www.avantssar.eu/arspa-wits11/">Theory of Security and Applications (TOSCA'11)</a>, Invited paper, April 2011.</li>
@@ -355,9 +353,13 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 <h2>Teaching</h2>
 
 <ul style="width:42em; text-align: left">
+  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">Type Systems for Security Verification</a></b>, Lecture, Saarland University, 16-27 March 2015
+  </li>
+<!--
   <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html">Type Systems for Security Verification</a></b>
     - Block Lecture, Saarland University, 16-27 March 2015<br/>
   </li>
+-->
   <li style="margin-bottom: 1ex;"><b><a href="http://www.cis.upenn.edu/~bcpierce/courses/670Fall12/">Advanced Martial Arts in Coq</a></b>
     - CIS670 at UPenn, Fall 2012.
     Guest lecturer for 2 lectures:
@@ -454,7 +456,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 
   <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/xia/">Li-yao Xia</a>
   <ul>
-    <li style="margin-top: 1ex;">Upcoming Internship at Inria, 2015-04 to 2015-08:<br/>
+    <li style="margin-top: 1ex;">Ongoing Internship at Inria, 2015-04 to 2015-08:<br/>
       <a href="students/topics/2015/quick-chick-li-yao.pdf">Optimal Parameter Selection for Property-Based Testing</a>
     </li>
   </ul>
