--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@ MPRI website</a>.</p>
 <!--
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu, Michael Greenberg, Ben Karel, Benjamin C. Pierce, Greg Morrisett. <b><a href="publications/all-your-ifcexception-oakland2013-full.pdf">All Your IFCException Are Belong To Us</a></b>. In <a href="http://www.ieee-security.org/TC/SP2013/">34th IEEE Symposium on Security and Privacy (Oakland  S&amp;P)</a>, pages 3-17, IEEE Computer Society Press, May 2013.
   <ul style="font-size: small">
-    <li>Coq formalization and proofs are available <!--a href="publications/all-your-ifcexception-coq-proofs.zip"--><a href="https://github.com/mgree/navdifc">here</a>.</li>
-<!--TODO: bring these back    <li>Breeze interpreter, libraries, and sample applications are available <a href="http://www.crash-safe.org/releases">here</a>.</li>-->
+    <li>Coq formalization and proofs are available <!-/-a href="publications/all-your-ifcexception-coq-proofs.zip"-/-><a href="https://github.com/mgree/navdifc">here</a>.</li>
+<!-/-TODO: bring these back    <li>Breeze interpreter, libraries, and sample applications are available <a href="http://www.crash-safe.org/releases">here</a>.</li>-/->
     <li>A previous version of this work was called <a href="http://www.cis.upenn.edu/~mgree/papers/popl2013_exceptional.pdf">Exceptionally Available Dynamic IFC</a>, July 2012.</li>
   </ul>
   </li>
