--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ Research Cambridge</a>.</p>
 <ul style="width:42em; text-align: left">
 
 <!--http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html-->
+  <li style="margin-bottom: 1ex;">Certified Programs and Proofs, CPP 2016 (PC member)</li>
+
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">Type Systems for Security Verification</a>, Lecture, Saarland University, 16-27 March 2015
   </li>
   <li style="margin-bottom: 1ex;">
@@ -202,7 +204,8 @@ MPRI website</a>.</p>
     Karthikeyan Bhargavan, and
     C&eacute;dric Fournet.
     <b><a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></b>.
-    Submitted to ICFP 2015. Draft of March 2015.
+    <!-- Submitted to ICFP 2015. -->
+    Draft of March 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -224,10 +227,10 @@ MPRI website</a>.</p>
     Nick Giannarakis,
     C&#259;t&#259;lin Hri&#355;cu,
     Benjamin C. Pierce,
-    Antal Spector-Zabusky,
-    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Verified, Tag-Based Security Monitors</a></b>. To appear in <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, May 2015.
+    Antal Spector-Zabusky,-
+    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></b>. To appear in <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, May 2015.
   <ul style="font-size: small">
-    <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a></li>
+    <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a>; <a href="https://www.seas.upenn.edu/~aarthur/micro-policies-full.pdf">Long version</a></li>
   </ul>
   </li>
 
@@ -465,7 +468,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   <li style="margin-bottom: 1ex;">Simon Forest
   <ul>
     <li style="margin-top: 1ex;">Ongoing Internship at Inria, 2015-03 to 2015-08:<br/>
-      <a href="students/topics/2015/fstar.pdf">F*: SMT-Based Verification for ML</a>
+      <a href="students/topics/2015/fstar.pdf">Metatheory of &mu;F* in F*</a>
     </li>
   </ul>
   </li>
