--- a/publications.html
+++ b/publications.html
@@ -59,14 +59,15 @@
 <h3>Conference Papers</h3>
 <ol start="5" style="width:42em; text-align: left">
 
+
   <li style="margin-bottom: 1ex;">
     Arthur Azevedo de Amorim,
     Maxime Dénès,
     Nick Giannarakis,
     C&#259;t&#259;lin Hri&#355;cu,
     Benjamin C. Pierce,
-    Antal Spector-Zabusky,
-    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf">Micro-Policies: A Framework for Verified, Tag-Based Security Monitors</a></b>. Accepted at <a href="http://www.ieee-security.org/TC/SP2015/">Oakland S&amp;P 2015</a>. Draft of November 2014.
+    Antal Spector-Zabusky,-
+    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></b>. To appear in <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, May 2015.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a></li>
   </ul>
