--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Research Cambridge</a>.</p>
 <ul style="width:42em; text-align: left">
 
 <!--http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html-->
-  <li style="margin-bottom: 1ex;">Certified Programs and Proofs, CPP 2016 (PC member)</li>
+  <li style="margin-bottom: 1ex;"><!-- <a href="http://people.csail.mit.edu/adamc/cpp16/"> -->Certified Programs and Proofs, CPP 2016<!-- </a> --> (PC member)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">Type Systems for Security Verification</a>, Lecture, Saarland University, 16-27 March 2015
   </li>
@@ -321,6 +321,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>Micro-Policies: A Framework for Verified, Tag-Based Security Monitors</em>
     <ul style="font-size: small">
+      <li>HP Labs - Inria seminar: <a href="talks/Micro-Policies-HP-Inria.pdf">slides</a> (2015-05-21)</li>
       <li>Inria Prosecco evaluation</a>: <a href="talks/Micro-Policies-Prosecco-eval.pdf">slides</a> (2015-03-20)</li>
       <li><a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC)</a>: <a href="talks/Micro-Policies-FCS.pdf">slides</a> (2014-07-18)</li>
       <li><a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
